fixed site logo height on mobile

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -239,7 +239,7 @@ pre {
   margin: 0 auto;
 
   @include media-query-max($on-palm) {
-    max-width: 250px;
+    max-height: 220px;
   }
 }
 
