--- a/sass/_site-header.scss
+++ b/sass/_site-header.scss
@@ -11,7 +11,7 @@
 
   @include media-query-max($on-palm) {
     padding-top: 1em;
-    padding-bottom: 0em;
+    padding-bottom: 1em;
   }
 
   // Positioning context for the mobile navigation icon
